--- a/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
+++ b/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
@@ -1,7 +1,49 @@
 .checkbox {
-
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+    margin: 10px 0 0 20px;
 }
 
 .spanClassName {
+    font-size: 24px;
+    font-style: italic;
+    font-weight: bold;
+    position: relative;
+    padding: 0 0 0 60px;
+    cursor: pointer;
+}
 
+.spanClassName:before {
+    content: '';
+    position: absolute;
+    top: -4px;
+    left: 0;
+    width: 50px;
+    height: 26px;
+    border-radius: 13px;
+    background: #CDD1DA;
+    box-shadow: inset 0 2px 3px rgba(0, 0, 0, .2);
+    transition: .2s;
+}
+
+.spanClassName:after {
+    content: '';
+    position: absolute;
+    top: -2px;
+    left: 2px;
+    width: 22px;
+    height: 22px;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .3);
+    transition: .2s;
+}
+
+input:checked + .spanClassName:before {
+    background: #dbc03f;
+}
+
+input:checked + .spanClassName:after {
+    left: 26px;
 }
