just change the checkbox color

--- a/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
+++ b/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
@@ -41,7 +41,7 @@
 }
 
 input:checked + .spanClassName:before {
-    background: #dbc03f;
+    background: #6cce26;
 }
 
 input:checked + .spanClassName:after {
